# lastBoard

./: .mxproject  CMakeCache.txt  CMakeLists.txt  STM32F413RGTx_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  lastBoard.ioc
Core/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
src/: CMakeLists.txt  basicI2C.c  basicI2C.h  basicPin.c  hardwareConfig.h  i2cConfig.c  i2cConfig.h  utilities.c  utilities.h
test/: CMakeLists.txt  main.cpp
test/utilities/: CMakeLists.txt  testUtilities.c
